--- a/website/main/templates/main/about.html
+++ b/website/main/templates/main/about.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>About</title>
-</head>
-<body>
-about
-</body>
-</html>
+{% extends 'main/layout.html' %}
+
+{% block title %}
+About page
+{% endblock %}
+
+{% block content %}
+<h1>About</h1>
+{% endblock %}
