--- a/website/main/templates/main/index.html
+++ b/website/main/templates/main/index.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Main Page</title>
-</head>
-<body>
-    main page
-</body>
-</html>
+{% extends 'main/layout.html' %}
+
+{% block title %}
+Main page
+{% endblock %}
+
+{% block content %}
+<h1>Main</h1>
+{% endblock %}
