--- a/website/main/static/main/css/main.css
+++ b/website/main/static/main/css/main.css
@@ -1,3 +1,24 @@
 body{
-    background:red;
+    display: grid;
+
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+}
+
+.form-enter{
+    width: 450px;
+
+    display: flex;
+    flex-direction: column;
+    justify-self: center;
+    align-self: center;
+    gap: 30px;
+
+    border: 1px solid lightgray;
+    border-radius: 10px;
+    padding: 20px
+}
+.form-enter h1{
+    text-align: center
 }
