--- a/website/main/templates/main/product/detail.html
+++ b/website/main/templates/main/product/detail.html
@@ -1,7 +1,28 @@
-{% extended layout %}
+{% extends layout %}
+{% load static %}
 
-{% block title %}Product{% endblock title %}
+{% block title %}{{ product.name }}{% endblock title %}
 
 {% block content %}
+    <div class="detail-product">
+        <div class="detail-img">
+            <img src="{% if product.image %}{{product.image.url}}{% else %}{% static 'img/noimage.jpg' %}{% endif %}"
+                 alt="product-image">
+        </div>
+         <div class="detail-description">
+                <h2>{{product.name}}</h2>
+                <h3>Category: {{product.category}}</h3>
+                <p>Description: {{product.description}}</p>
 
+                {% if product.discount%}
+                    <div class="card-discount">
+                        <p class="line">{{ product.price }}</p>
+                        <p>{{ product.sell_price }}</p>
+                    </div>
+                {% else %}
+                    <p class="line">{{ product.price }}</p>
+                {% endif %}
+                <a href="#" class="cart-btn">Add to cart</a>
+            </div>
+    </div>
 {% endblock content %}
