--- a/website/main/templates/main/layout.html
+++ b/website/main/templates/main/layout.html
@@ -7,7 +7,7 @@
     <title>{% block title %}{% endblock title %}</title>
 
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css'%}">
-    <link rel="stylesheet" href="{% static 'main/static/css/base.css' %}">
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
 </head>
 <body>
     <header class="header sticky-top">
