--- a/website/main/templates/main/index/index.html
+++ b/website/main/templates/main/index/index.html
@@ -6,19 +6,19 @@
 
 {% block content %}
     <section class="home d-flex flex-column">
-        <div class="home-title"><a href="#" class="home-btn mt-4">ALL PRODUCTS</a></div>
+        <div class="home-title d-flex flex-column align-items-center"><a href="#" class="home-btn mt-4">ALL PRODUCTS</a></div>
         <div class="home-recommendation">
-            <div class="rec-title">
+            <div class="rec-title mb-4">
                 <h3><span>Popular Accessories</span></h3>
             </div>
         </div>
-        <div class="home-cards">
+        <div class="home-cards d-flex gap-4">
             {% for product in products %}
-            <a href="{{ product.get_absolute_url }}" class="home-card">
+            <a href="{{ product.get_absolute_url }}" class="home-card d-flex flex-column align-items-center text-center">
                 <img src="{{ product.image.url }}" class="card-img" alt="product-image">
                 <h5 class="card-name">{{ product.name }}</h5>
                 {% if product.discount%}
-                    <div class="card-discount">
+                    <div class="card-discount d-flex gap-2">
                         <p class="line">{{ product.price }}</p>
                         <p>{{ product.sell_price }}</p>
                     </div>
