--- a/website/main/templates/main/product/detail.html
+++ b/website/main/templates/main/product/detail.html
@@ -1,4 +1,4 @@
-{% extends layout %}
+{% extends 'main/layout.html' %}
 {% load static %}
 
 {% block title %}{{ product.name }}{% endblock title %}
