--- a/website/main/templates/main/index/index.html
+++ b/website/main/templates/main/index/index.html
@@ -20,10 +20,10 @@
                 {% if product.discount%}
                     <div class="card-discount d-flex gap-2">
                         <p class="line">{{ product.price }}</p>
-                        <p>{{ product.sell_price }}</p>
+                        <p>$ {{ product.sell_price }}</p>
                     </div>
                 {% else %}
-                    <p class="line">{{ product.price }}</p>
+                    <p class="line">$ {{ product.price }}</p>
                 {% endif %}
             </a>
             {% endfor %}
