--- a/website/main/templates/main/product/list.html
+++ b/website/main/templates/main/product/list.html
@@ -20,7 +20,7 @@
         </div>
         <div class="main">
             <div class="main-title">
-                {% if category %}{{ category.name }}{% else %}{% endif %}
+                {% if category %}{{ category.name }}{% else %}All products{% endif %}
             </div>
             <div class="product-list">
                 <div class="items">
